--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,16 +1,16 @@
 # Use a modern Python base image based on Debian Bookworm
 FROM python:3.11-slim-bookworm
 
-# --- Add a version argument for the /version endpoint ---
-ARG APP_VERSION=2.0.0
+# Argument for the application version, passed from docker-compose.yml
+ARG APP_VERSION=3.0.0
 ENV APP_VERSION=${APP_VERSION}
 
 WORKDIR /app
 
-# Prevent apt-get from asking questions
+# Prevent apt-get from asking interactive questions
 ENV DEBIAN_FRONTEND=noninteractive
 
-# --- Updated to include Tesseract language packs ---
+# Install all necessary system-level dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     ffmpeg \
@@ -23,7 +23,7 @@ RUN apt-get update && \
     && apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# --- Set TESSDATA_PREFIX for Tesseract to find language packs ---
+# Set the TESSDATA_PREFIX environment variable so Tesseract can find the language packs
 ENV TESSDATA_PREFIX=/usr/share/tesseract-ocr/4.00/tessdata
 
 # Copy and install Python requirements
@@ -33,10 +33,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Install the browser binaries required by Playwright (for crawl4ai)
 RUN playwright install chromium
 
-# Copy our application code into the container
+# Copy the application code into the container
 COPY main.py .
 
-# Expose the port the app will run on
+# Expose the port the app will run on internally
 EXPOSE 8000
 
 # The command to run when the container starts
